--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@ footer {
     <h1>RR Rentals</h1>
     <nav>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
               
                 <li><a href="contact.html">Contact us</a></li>
