--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@ footer {
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="rentalpage.html">About</a></li>
               
                 <li><a href="contact.html">Contact us</a></li>
                 <li><a href="loginpage.html" class="active">Login</a></li>
